# Financial-AI-DashBoard

./: README.md
FinancialIntelSuite/: ai_insights.py  app.py  data_extractor.py  data_processor.py  forecasting.py  pyproject.toml  server.py  utils.py  visualizations.py
FinancialIntelSuite/attached_assets/: Pasted-AI-Dashboard-for-John-Keells-Financial-Data-Objective-Develop-an-interactive-AI-powered-dashbo-1746115555973.txt
FinancialIntelSuite/frontend/: package.json
FinancialIntelSuite/frontend/src/: App.css  App.js
FinancialIntelSuite/frontend/src/components/: Dashboard.js  Filters.js  UploadForm.js
FinancialIntelSuite/frontend/src/components/charts/: CostExpenses.js  EPSTrend.js  GPMargin.js  NetAssetShare.js  RevenueTrend.js  TopShareholders.js
FinancialIntelSuite/uploads/: processed_data.json
